refactor: Improve code quality and test coverage
#comment Refactor code to improve clarity, remove redundant checks, and enhance test coverage:

1. Remove unnecessary viewCounts field from InMemoryHistoryManager.
2. Add null checks in the add method of InMemoryHistoryManager.
3. Remove duplicate node checks in the remove method of InMemoryHistoryManager.
4. Streamline InMemoryTaskManager by ensuring addToHistory handles null checks and implementing epic deletion from history.
5. Extend unit tests in InMemoryHistoryManagerTest and InMemoryTaskManagerTest to cover more scenarios, including removing tasks from different parts of history.

Affected: InMemoryHistoryManager, InMemoryTaskManager, InMemoryHistoryManagerTest, InMemoryTaskManagerTest